--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -19,7 +19,7 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Cart</h1>
+								<h1>Sepet</h1>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -40,12 +40,12 @@
                     <table class="table">
                       <thead>
                         <tr>
-                          <th class="product-thumbnail">Image</th>
-                          <th class="product-name">Product</th>
-                          <th class="product-price">Price</th>
-                          <th class="product-quantity">Quantity</th>
-                          <th class="product-total">Total</th>
-                          <th class="product-remove">Remove</th>
+                          <th class="product-thumbnail">Görsel</th>
+                          <th class="product-name">Ürün</th>
+                          <th class="product-price">Fiyat</th>
+                          <th class="product-quantity">Adet</th>
+                          <th class="product-total">Toplam</th>
+                          <th class="product-remove">Sil</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -106,22 +106,29 @@
                 <div class="col-md-6">
                   <div class="row mb-5">
                     <div class="col-md-6 mb-3 mb-md-0">
-                      <button class="btn btn-black btn-sm btn-block">Update Cart</button>
+                     
+                      <button class="btn btn-black btn-sm btn-block" onclick="updateCart()">Sepeti Güncelle</button>
+
+<script>
+function updateCart() {
+    location.reload();
+}
+</script>
                     </div>
                     <div class="col-md-6">
-                      <button class="btn btn-outline-black btn-sm btn-block">Continue Shopping</button>
+                      <button class="btn btn-outline-black btn-sm btn-block">Alışverişe Devam Et</button>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-md-12">
-                      <label class="text-black h4" for="coupon">Coupon</label>
-                      <p>Enter your coupon code if you have one.</p>
+                      <label class="text-black h4" for="coupon">Kupon</label>
+                      <p>Kupon kodunuz varsa girin.</p>
                     </div>
                     <div class="col-md-8 mb-3 mb-md-0">
-                      <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
+                      <input type="text" class="form-control py-3" id="coupon" placeholder="Kupon Kodu">
                     </div>
                     <div class="col-md-4">
-                      <button class="btn btn-black">Apply Coupon</button>
+                      <button class="btn btn-black">Kupon Uygula</button>
                     </div>
                   </div>
                 </div>
@@ -130,12 +137,12 @@
                     <div class="col-md-7">
                       <div class="row">
                         <div class="col-md-12 text-right border-bottom mb-5">
-                          <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                          <h3 class="text-black h4 text-uppercase">Sepet Toplamı</h3>
                         </div>
                       </div>
                       <div class="row mb-3">
                         <div class="col-md-6">
-                          <span class="text-black">Subtotal</span>
+                          <span class="text-black">Ara Toplam</span>
                         </div>
                         <div class="col-md-6 text-right">
                           <strong class="text-black">$230.00</strong>
@@ -143,7 +150,7 @@
                       </div>
                       <div class="row mb-5">
                         <div class="col-md-6">
-                          <span class="text-black">Total</span>
+                          <span class="text-black">Toplam</span>
                         </div>
                         <div class="col-md-6 text-right">
                           <strong class="text-black">$230.00</strong>
@@ -152,7 +159,7 @@
         
                       <div class="row">
                         <div class="col-md-12">
-                          <a href="checkout" class="btn btn-black btn-lg py-3 btn-block">Proceed To Checkout</a>
+                          <a href="checkout" class="btn btn-black btn-lg py-3 btn-block">Ödeme Yap</a>
                         </div>
                       </div>
                     </div>
