--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -269,7 +269,7 @@
 		                </div>
 
 		                <div class="form-group">
-		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou.html'">Sipariş Ver</button>
+		                  <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='thankyou'">Sipariş Ver</button>
 		                </div>
 
 		              </div>
