--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -116,7 +116,7 @@ function updateCart() {
 </script>
                     </div>
                     <div class="col-md-6">
-                      <button class="btn btn-outline-black btn-sm btn-block">Alışverişe Devam Et</button>
+                      <p><a href="shop" class="btn btn-sm btn-outline-black">Alışverişe Devam Et</a></p>
                     </div>
                   </div>
                   <div class="row">
