--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
 
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="cart">
 							<img src="/images/hali3.jpg" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Isparta Halıları</h3>
 							<strong class="product-price">$79.00</strong>
@@ -63,7 +63,7 @@
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="cart">
 							<img src="/images/hali5.jpg" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Ardahan Halıları</h3>
 							<strong class="product-price">$66.00</strong>
@@ -77,7 +77,7 @@
 
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="cart">
 							<img src="/images/hali6.jpg" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Kayseri Halıları</h3>
 							<strong class="product-price">$43.00</strong>
