--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 						<a class="product-item" href="cart">
 							<img src="/images/hali3.jpg" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Bursa Halıları</h3>
+							<h3 class="product-title">Bursa Halısı</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
